--- a/assets/css/default/common.css
+++ b/assets/css/default/common.css
@@ -22,39 +22,9 @@
     visibility: hidden !important;
 } */
 
-/* Skeleton loading animation for i18n */
-@keyframes skeleton-loading {
-    0% {
-        background-position: -200px 0;
-    }
 
-    100% {
-        background-position: calc(200px + 100%) 0;
-    }
-}
-
-html.i18n-loading h1,
-html.i18n-loading h2,
-html.i18n-loading h3,
-html.i18n-loading h4,
-html.i18n-loading h5,
-html.i18n-loading p,
-html.i18n-loading li,
-html.i18n-loading td,
-html.i18n-loading th,
-html.i18n-loading a,
-html.i18n-loading button,
-html.i18n-loading span:not(.separator):not(.accordion-chevron):not(.material-symbols-outlined),
-html.i18n-loading label {
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0.05) 0px, rgba(255, 255, 255, 0.15) 40px, rgba(255, 255, 255, 0.05) 80px);
-    background-size: 600px;
-    animation: skeleton-loading 1.5s ease-in-out infinite;
-    color: transparent !important;
-    border-radius: 4px;
-    display: inline-block;
-    min-width: 80px;
-    min-height: 1.2em;
-}
+/* i18n Loading State - Prevent FOUC removed per user request */
+/* Skeleton loading animation removed per user request */
 
 .adsbygoogle-noablate {
     right: 86px !important;
